@@ -38,6 +38,9 @@ Release 0.8.7
 - ensure that ZMOffers does not divide by 0; #1868900
 - fixed ZMReviews::updateViewCount()
 - build the category tree on first access
+- renamed ZMAjaxProductController to ZMAjaxCatalogController
+- remove obsolete ZMAjaxCatalogController::getAttributesForProductIdJSON()
+- make zm_ajax_href work in admin pages
 
 Release 0.8.6.1
 - fix hardcoded tablename in ZMBanners; #1856664
